K/k8s-node-image-1-16-7iRoKpGDCaWdGZ/k8s-node-image-1-16.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8s-node-image-1-16-ana
  labels:
    app.kubernetes.io/name: k8s-node-image-1-16
    helm.sh/chart: k8s-node-image-1-16-0.2.71
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: anaconda
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-node-image-1-16
    app.kubernetes.io/instance: release-name
    svc: anaconda
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8s-node-image-1-16-node
  labels:
    app.kubernetes.io/name: k8s-node-image-1-16
    helm.sh/chart: k8s-node-image-1-16-0.2.71
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: k8s-node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-node-image-1-16
    app.kubernetes.io/instance: release-name
    svc: k8s-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8s-node-image-1-16-ana
  labels:
    app.kubernetes.io/name: k8s-node-image-1-16
    helm.sh/chart: k8s-node-image-1-16-0.2.71
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: anaconda
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-node-image-1-16
      app.kubernetes.io/instance: release-name
      svc: anaconda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-node-image-1-16
        app.kubernetes.io/instance: release-name
        svc: anaconda
    spec:
      containers:
        - name: main
          command:
            - nginx
            - -g
            - daemon off;
          image: docker.io/pnnlmiscscripts/anaconda:20201029-1700-nginx-1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nginx -s quit
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8s-node-image-1-16-node
  labels:
    app.kubernetes.io/name: k8s-node-image-1-16
    helm.sh/chart: k8s-node-image-1-16-0.2.71
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: k8s-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-node-image-1-16
      app.kubernetes.io/instance: release-name
      svc: k8s-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-node-image-1-16
        app.kubernetes.io/instance: release-name
        svc: k8s-node
    spec:
      containers:
        - name: main
          command:
            - nginx
            - -g
            - daemon off;
          image: docker.io/pnnlmiscscripts/k8s-node-image:1.16.15-nginx-9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nginx -s quit
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-k8s-node-image-1-16
  labels:
    app.kubernetes.io/name: k8s-node-image-1-16
    helm.sh/chart: k8s-node-image-1-16-0.2.71
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /1.16.15-nginx-9/?(.*)$
            backend:
              serviceName: release-name-k8s-node-image-1-16-node
              servicePort: http
          - path: /1.16.15-nginx-9/(vmlinuz$)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
          - path: /1.16.15-nginx-9/(initrd.img$)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
          - path: /1.16.15-nginx-9/images/pxeboot/(vmlinuz$)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
          - path: /1.16.15-nginx-9/images/pxeboot/(initrd.img$)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
          - path: /1.16.15-nginx-9/(LiveOS$|LiveOS/.*)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
          - path: /1.16.15-nginx-9/(.treeinfo$)
            backend:
              serviceName: release-name-k8s-node-image-1-16-ana
              servicePort: http
